@@ -1,5 +1,7 @@
 Changes in 1.7.3 (??.??.2011)
 
+ - Add integer template specialization for vector3d::getSphericalCoordinateAngles which rounds angles to nearest integer now.
+
  - Recalculate FrameRect and ScrollPos in CGUIEditBox when AbsoluteRect gets changed (thx @ serengeor for report + testcase)
  
  - Fix 'k' in bigfont.png (thx @ Scrappi for reporting)
